--- a/index.html
+++ b/index.html
@@ -1,57 +1,43 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Exam Form</title>
+        <title>Exam layout</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
-        <div class="head">
-            <div class="form_body">
+        <div class="fullbody">
+            <div class="top-header"></div>
+            <div class="layout">
                 <div class="header">
-                    <p>Sign up</p>
+                    <div class="logo"></div>
+                    <div class="banner"></div>
+                    <div class="search">
+                        <div class="search_top"></div>
+                        <div class="search_top"></div>
+                    </div>
+                    <div class="username"></div>
                 </div>
-                <form>
-                    <div>
-                        <label for="first_name">First Name</label>
-                        <input type="text" id="first_name" name="first-name"/>
+                <div class="body">
+                    <div class="left_sidebar">
+                        <div class="left_sidebar_top"></div>
+                        <div class="left_sidebar_bottom"></div>
                     </div>
-                    <div>
-                        <label for="last_name">Last Name</label>
-                        <input type="text" id="last_name" name="last_name"/>
+                    <div class="main_content">
+                        <div class="main_content_one"></div>
+                        <div class="main_content_two"></div>
+                        <div class="main_content_three">
+                            <div class="main_content_three_child"></div>
+                        </div>
                     </div>
-                    <div>
-                        <label for="email">E-mail Address</label>
-                        <input type="email" id="email" name="email"/>
+                    <div class="right_sidebar">
+                        <div class="right_sidebar_top"></div>
+                        <div class="right_sidebar_bottom"></div>
                     </div>
-                    <div>
-                        <p>TestFlight will use this address to authenticate and notify you of new builds.</p>
+                    <div class="footer">
+                        <div class="footer_part"></div>
                     </div>
-                    <div>
-                        <label for="conf_email">Confirm E-mail</label>
-                        <input type="email" id="conf_email" name="conf_email"/>
-                    </div>
-                    <div>
-                        <p>Please confirm your email address.</p>
-                    </div>
-                    <div>
-                        <label for="password">Password</label>
-                        <input type="password" id="password" name="password"/>
-                    </div>
-                    <div>
-                        <label for="conf_password">Confirm</label>
-                        <input type="password" id="conf_password" name="conf_password"/>
-                    </div>
-                    <div>
-                        <label for="text">I am a developer</label>
-                        <input type="checkbox" id="checkbox" name="checkbox"/>
-                    </div>
-                    <p>If you would like to upload your own builds and invite your own testers </p>
-                    <div>
-                        <button type="submit" id="submit" name="submit">Sign up></button>
-                    </div>
-                </form>
+                </div>
             </div>
         </div>
     </body>
